Upgrade project JDK to 25.